--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ nav .links a:hover{
 }
 @media (max-width:600px){
     .home .home-content h3,.home .home-content h2{
-        font-size: 17px;
+        font-size: 20px;
     }
     .home .home-content p{
         font-size: 12px;
@@ -146,8 +146,8 @@ nav .links a:hover{
 /* end home */
 /* welcome */
 .welcome .rightside img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
 }
 /* end welcome */
 /* choose */
